# UniText

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  UniText PLAN.md  update_metadata.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
bindings/ffi/: Cargo.toml  test.c  unitext.h
bindings/ffi/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml  test.py
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/unitext-benches/: Cargo.toml
crates/unitext-benches/benches/: benchmarks.rs
crates/unitext-cli/: Cargo.toml
crates/unitext-cli/examples/: form_sanitizer.rs  url_validator.rs  username_checker.rs
crates/unitext-cli/src/: main.rs
crates/unitext-core/: Cargo.toml
crates/unitext-core/src/: grapheme_table.rs  lib.rs  normalizer.rs  wire_format.rs
crates/unitext-security/: Cargo.toml
crates/unitext-security/data/: confusables.txt
crates/unitext-security/src/: confusables.rs  homograph.rs  lib.rs  mixed_script.rs  risk_scorer.rs
crates/unitext-string/: Cargo.toml
crates/unitext-string/src/: convert.rs  lib.rs  uni_string.rs
docs/: architecture.md  cjk-variants.md
web-playground/: app.js  index.html  style.css
