[workspace]
members = [
    "crates/unitext-core",
    "crates/unitext-string",
    "crates/unitext-security",
    "crates/unitext-cli"
]
resolver = "2"

[workspace.dependencies]
unicode-segmentation = "1.12"
unicode-normalization = "0.1"
icu = "1.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
