[package]
name = "unitext-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unitext-core = { path = "../../crates/unitext-core" }
unitext-string = { path = "../../crates/unitext-string" }
unitext-security = { path = "../../crates/unitext-security" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
