[package]
name = "unitext-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Divya Jaiswal"]
description = "A Next-Generation Text Encoding Abstraction System"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silent-killer07/UniText"
keywords = ["unicode", "text", "security", "grapheme"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unitext-core = { path = "../../crates/unitext-core" }
unitext-string = { path = "../../crates/unitext-string" }
unitext-security = { path = "../../crates/unitext-security" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
