[package]
name = "unitext-benches"
version = "0.1.0"
edition = "2021"
authors = ["Divya Jaiswal"]
description = "A Next-Generation Text Encoding Abstraction System"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silent-killer07/UniText"
keywords = ["unicode", "text", "security", "grapheme"]
publish = false

[dev-dependencies]
criterion = "0.5.1"
unitext-core = { path = "../unitext-core" }
unitext-string = { path = "../unitext-string" }
unitext-security = { path = "../unitext-security" }

[[bench]]
name = "benchmarks"
harness = false
